--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Delius&family=Fuzzy+Bubbles:wght@400;700&family=Merienda&family=Moon+Dance&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Patrick+Hand&family=Playpen+Sans&family=Roboto:ital,wght@0,100..900;1,100..900&family=Satisfy&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+<link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#ff5722" />
 
     <meta
       name="description"
